--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "react-hooks-pull-to-refresh",
   "version": "1.0.0",
-  "description": "React hooks",
+  "description": "The pull-to-refresh user interface pattern implemented with React Hooks.",
   "keywords": [
     "react",
     "hooks",
     "pull to refresh",
     "下拉刷新"
+  ],
+  "engines": {
+    "node": ">=10.13.0"
+  },
+  "browserslist": [
+    ">= 0.05%",
+    "not ie 8"
   ],
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
@@ -14,13 +21,10 @@
   "typings": "lib/index.d.ts",
   "types": "lib/index.d.ts",
   "sideEffects": false,
-  "author": "徐远翔 <hi@xuyuanxiang.cn>",
+  "author": "xuyuanxiang <hi@xuyuanxiang.cn>",
   "license": "MIT",
   "homepage": "https://github.com/xuyuanxiang/react-hooks-pull-to-refresh",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/xuyuanxiang/react-hooks-pull-to-refresh.git"
-  },
+  "repository": "git+https://github.com/xuyuanxiang/react-hooks-pull-to-refresh.git",
   "bugs": {
     "url": "https://github.com/xuyuanxiang/react-hooks-pull-to-refresh/issues"
   },
@@ -31,8 +35,7 @@
   },
   "files": [
     "lib",
-    "src",
-    "types"
+    "src"
   ],
   "peerDependencies": {
     "react": "^16.8.0",
@@ -40,14 +43,27 @@
     "styled-components": ">= 4.1.4 || >= 5.0.0"
   },
   "dependencies": {
+    "core-js": "^3.6.4",
     "lodash.throttle": "^4.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.0",
+    "@babel/preset-typescript": "^7.9.0",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
+    "@storybook/addon-docs": "^5.3.17",
+    "@storybook/addon-viewport": "^5.3.17",
+    "@storybook/addons": "^5.3.17",
+    "@storybook/react": "^5.3.17",
+    "@storybook/source-loader": "^5.3.17",
     "@types/react": "^16.9.25",
     "@types/react-dom": "^16.9.5",
     "@types/styled-components": "^5.0.1",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-styled-components": "^1.10.7",
+    "cross-env": "^7.0.2",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
     "lint-staged": "^10.0.8",
@@ -58,16 +74,25 @@
     "rollup-plugin-terser": "^5.3.0",
     "rollup-plugin-typescript2": "^0.26.0",
     "styled-components": "^5.0.1",
+    "stylelint": "^11.1.1",
+    "stylelint-config-prettier": "^6.0.0",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-prettier": "^1.1.1",
+    "stylelint-processor-styled-components": "^1.8.0",
     "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.2.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "typescript-plugin-styled-components": "^1.4.4"
   },
   "scripts": {
+    "start": "start-storybook -p 6006",
     "test": "jest --no-cache --coverage",
     "lint": "tslint -c tslint.json -p tsconfig.json",
-    "build": "rollup -c",
-    "watch": "tsc -w -p ."
+    "compile": "rollup -c",
+    "watch": "tsc -w -p .",
+    "build": "cross-env BABEL_ENV=production NODE_ENV=production build-storybook --no-dll --quiet -o public"
   },
   "husky": {
     "hooks": {
@@ -75,8 +100,9 @@
     }
   },
   "lint-staged": {
-    "**/*.ts": [
-      "tslint -c tslint.json --fix",
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "stylelint",
       "git add"
     ]
   }
