--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "lint-staged": "^10.0.8",
     "prettier": "^2.0.2",
     "react": "^16.13.1",
+    "react-docgen-typescript-loader": "^3.7.1",
     "react-dom": "^16.13.1",
     "rollup": "^2.1.0",
     "rollup-plugin-terser": "^5.3.0",
@@ -85,7 +86,8 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.2.0",
     "typescript": "^3.8.3",
-    "typescript-plugin-styled-components": "^1.4.4"
+    "typescript-plugin-styled-components": "^1.4.4",
+    "validate-commit-msg": "^2.14.0"
   },
   "scripts": {
     "start": "start-storybook -p 6006",
@@ -98,7 +100,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "commit-msg": "validate-commit-msg"
     }
   },
   "lint-staged": {
