--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@storybook/addons": "^5.3.17",
     "@storybook/react": "^5.3.17",
     "@storybook/source-loader": "^5.3.17",
+    "@types/jest": "^25.1.4",
     "@types/react": "^16.9.25",
     "@types/react-dom": "^16.9.5",
     "@types/styled-components": "^5.0.1",
@@ -67,6 +68,7 @@
     "cross-env": "^7.0.2",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
+    "jest-styled-components": "^7.0.0",
     "lint-staged": "^10.0.8",
     "prettier": "^2.0.2",
     "react": "^16.13.1",
