--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ notifications:
     on_failure: always
 before_deploy:
   - npm run compile
+  - npm run gen
   - npm run build
 deploy:
   - provider: npm
