--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ notifications:
       - chaos@xuyuanxiang.cn
     on_success: never
     on_failure: always
+scripts:
+  - npm install codecov -g
 before_deploy:
   - npm run compile
   - npm run gen
@@ -34,3 +36,5 @@ deploy:
     on:
       branch: master
       repo: xuyuanxiang/react-hooks-pull-to-refresh
+after_success:
+  - codecov
